# gluttonousSnake

./: CMakeLists.txt  README.md
src/: game.cpp  game.hpp  json_util.cpp  json_util.hpp  main.cpp  net.cpp  net.hpp  server.cpp  server.hpp  websocket.cpp  websocket.hpp
web/: index.html
